--- a/public/menu.html
+++ b/public/menu.html
@@ -1,1 +1,16 @@
-<h1>Hello world!</h1>
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <title>dotplay</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="stylesheets/style.css">
+  </head>
+
+  <body>
+    <h1>hello world!</h1>
+  </body>
+
+</html>
