--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="stylesheets/style.css">
+
+    <script src="js/app.js"></script>
+
   </head>
 
   <body ng-app="dotplay">
     <div ng-view></div>
+    <h1>Hello World!</h1>
   </body>
 
 </html>
