--- a/public/menu.html
+++ b/public/menu.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" ng-app="dotplay">
 
-  <head>
-    <title>hello world</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="stylesheets/style.css">
-  </head>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link rel="icon" href="http://getbootstrap.com/favicon.ico">
 
-  <body>
-    <h1>hello world!</h1>
-  </body>
+    <title>hello world!</title>
 
-</html>
+    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://getbootstrap.com/examples/signin/signin.css" rel="stylesheet">
+
+</head>
+
+<body>
+
+<h2>hello world!</h2>
+
+
+
+</body></html>
