--- a/public/index.html
+++ b/public/index.html
@@ -32,12 +32,12 @@
     <script src="src/angular-route.min.js" charset="utf-8"></script>
 
     <script src="js/app.js"></script>
+    <script src="js/menu.js"></script>
 
   </head>
 
   <body ng-app="dotplay">
     <div ng-view></div>
-    <h1>Hello World!</h1>
   </body>
 
 </html>
