--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="dotplay">
 
   <head>
     <title>dotplay</title>
@@ -7,7 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="stylesheets/style.css">
+  </head>
 
+  <body>
+    <div ng-view></div>
     <!-- Angular -->
     <script src="src/angular.min.js" charset="utf-8"></script>
 
@@ -33,11 +36,6 @@
 
     <script src="js/app.js"></script>
     <script src="js/menu.js"></script>
-
-  </head>
-
-  <body ng-app="dotplay">
-    <div ng-view></div>
   </body>
 
 </html>
