--- a/public/index.html
+++ b/public/index.html
@@ -7,35 +7,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="stylesheets/style.css">
+
+    <!-- Angular -->
+    <script src="src/angular.js" charset="utf-8"></script>
+
+    <!-- Angular Router -->
+    <script src="src/angular-route.js" charset="utf-8"></script>
+
+
+    <script src="js/app.js"></script>
+
+
   </head>
 
   <body>
     <div ng-view></div>
-    <!-- Angular -->
-    <script src="src/angular.min.js" charset="utf-8"></script>
 
-    <!-- Angular local storage -->
-    <script src="src/angular-local-storage.js" charset="utf-8"></script>
-
-    <!-- Angular animate -->
-    <script src="src/angular-animate.min.js" charset="utf-8"></script>
-
-    <!-- Angular Bootstrap-->
-    <script src="src/ui-bootstrap.js" charset="utf-8"></script>
-
-    <!-- Angular toasts, including templates and stylesheets -->
-    <script src="src/angular-toastr.min.js" charset="utf-8"></script>
-    <script type="text/javascript" src="src/angular-toastr.tpls.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="src/angular-toastr.min.css" />
-
-    <!-- Angular Bootstrap templates -->
-    <script src="src/ui-bootstrap-tpls.js" charset="utf-8"></script>
-
-    <!-- Angular Router -->
-    <script src="src/angular-route.min.js" charset="utf-8"></script>
-
-    <script src="js/app.js"></script>
-    <script src="js/menu.js"></script>
   </body>
 
 </html>
