--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,30 @@
-<!DOCTYPE html>
-<html ng-app="dotplay">
+<!-- index.html -->
+    <!DOCTYPE html>
 
-  <head>
-    <title>dotplay</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="stylesheets/style.css">
+    <!-- define angular app -->
+    <html ng-app="scotchApp">
+    <head>
+      <!-- SCROLLS -->
+      <!-- load bootstrap and fontawesome via CDN -->
+      <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
+      <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
 
-    <!-- Angular -->
-    <script src="src/angular.js" charset="utf-8"></script>
+      <!-- SPELLS -->
+      <!-- load angular via CDN -->
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
+          <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
+      <script src="script.js"></script>
+    </head>
 
-    <!-- Angular Router -->
-    <script src="src/angular-route.js" charset="utf-8"></script>
+    <!-- define angular controller -->
+    <body ng-controller="mainController">
 
+    ...
 
-    <script src="js/app.js"></script>
+    <!-- MAIN CONTENT AND INJECTED VIEWS -->
+    <div id="main">
+        {{ message }}
 
-
-  </head>
-
-  <body>
-    <div ng-view></div>
-
-  </body>
-
-</html>
+        <!-- angular templating -->
+        <!-- this is where content will be injected -->
+    </div>
