--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,15 @@
 <!DOCTYPE html>
-<html ng-app="dotplay">
+<html ng-app="appname">
 
   <head>
-    <title>dotplay</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="stylesheets/style.css">
-
-    <!-- Angular -->
-    <script src="src/angular.js" charset="utf-8"></script>
-
-    <!-- Angular Router -->
-    <script src="src/angular-route.js" charset="utf-8"></script>
-
-
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js"></script>
     <script src="js/app.js"></script>
-
-
   </head>
 
   <body>
-    
-    {{ message }}
-
+    <div ng-controller="appCtrl">
+      <p>{{greeting.text}}, world </p>
+    </div>
   </body>
 
 </html>
