--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,13 @@
 
 
   <!-- Angular -->
-  <script src="public/src/angular.min.js"></script>
+  <script src="src/angular.min.js"></script>
   <!-- Angular Router -->
-  <script src="public/src/angular-route.min.js"></script>
+  <script src="src/angular-route.min.js"></script>
 
   <!-- Controller -->
-  <script src="public/js/app.js"></script>
-  <script src="public/js/menu.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/menu.js"></script>
 
 </head>
 
