--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,15 @@
   <script src="src/angular.min.js"></script>
   <!-- Angular Router -->
   <script src="src/angular-route.min.js"></script>
+  <!-- Angular Bootstrap-->
+  <script src="src/ui-bootstrap.js" charset="utf-8"></script>
+  <!-- Angular Bootstrap templates -->
+  <script src="src/ui-bootstrap-tpls.js" charset="utf-8"></script>
 
   <!-- Controller -->
   <script src="js/app.js"></script>
   <script src="js/menu.js"></script>
+  <script src="js/play.js"></script>
 
 </head>
 
