--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,20 @@
   <script src="src/ui-bootstrap.js" charset="utf-8"></script>
   <!-- Angular Bootstrap templates -->
   <script src="src/ui-bootstrap-tpls.js" charset="utf-8"></script>
+  <!-- Angular local storage -->
+  <script src="src/angular-local-storage.min.js" charset="utf-8"></script>
+  <!-- Angular animate -->
+  <script src="src/angular-animate.min.js" charset="utf-8"></script>
+  <!-- Angular toasts, including templates and stylesheets -->
+  <script src="src/angular-toastr.min.js" charset="utf-8"></script>
+  <script type="text/javascript" src="src/angular-toastr.tpls.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="src/angular-toastr.min.css" />
+  <!-- Angular Fontawesome -->
+  <script src="src/angular-fontawesome.min.js" charset="utf-8"></script>
+  <!-- Bootstrap Core CSS -->
+  <link rel="stylesheet" href="css/bootstrap.min.css" media="screen" charset="utf-8">
+  <!-- Fontawesome CSS for icon support -->
+  <link href="src/font-awesome.min.css" rel="stylesheet" type="text/css">
 
   <!-- Controller -->
   <script src="js/app.js"></script>
