--- a/public/play.html
+++ b/public/play.html
@@ -1,2 +1,3 @@
-<h1>Play!</h1>
+<h1>The game goes here</h1>
 <button type="button" class="btn btn-primary" ng-click="backToMenu()">Back to menu</button>
+<button type="button" class="btn btn-primary" ng-click="test()">Test toastr</button>
