--- a/public/play.html
+++ b/public/play.html
@@ -1,3 +1,9 @@
-<h1>The game goes here</h1>
-<button type="button" class="btn btn-primary" ng-click="backToMenu()">Back to menu</button>
-<button type="button" class="btn btn-primary" ng-click="test()">Test toastr</button>
+<!DOCTYPE html>
+<html>
+	<body>
+		<canvas id="myCanvas" width="700" height="700"></canvas>
+	</body>
+	<button type="button" class="btn btn-primary" ng-click="backToMenu()">Back to menu</button>
+	<button type="button" class="btn btn-primary" ng-click="test()">Test toastr</button>
+	<button type="button" class="btn btn-primary" ng-click="setupDots(5,5)">Setup Game</button>
+</html>
