--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
   <script src="js/app.js"></script>
   <script src="js/menu.js"></script>
   <script src="js/play.js"></script>
+  <script src="https://code.createjs.com/easeljs-0.8.2.min.js"></script>
 
 </head>
 
