basic server interactions

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
+  <!-- SOCKET -->
+  <script src="src/socket.io.js"></script>
   <!-- Angular -->
   <script src="src/angular.min.js"></script>
   <!-- Angular Router -->
