--- a/public/menu.html
+++ b/public/menu.html
@@ -69,6 +69,7 @@
                     <div class="intro-text">
                         <span class="name">Dotplay</span>
                         <button align="center" type="button" class="btn btn-primary" ng-click="startGame()">Start!</button>
+                        <button align="center" type="button" class="btn btn-primary" ng-click="test()">Test!</button>
                         <hr class="star-light">
                         <span class="skills">A game either is a platformer or a puzzle</span>
                     </div>
