Can join room and set username

--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,15 @@
   <link rel="stylesheet" href="css/bootstrap.min.css" media="screen" charset="utf-8">
   <!-- Fontawesome CSS for icon support -->
   <link href="src/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <!-- EaselJS -->
+  <script src="https://code.createjs.com/easeljs-0.8.2.min.js"></script>
 
   <!-- Controller -->
   <script src="js/app.js"></script>
+  <script src="js/serverInterface.js"></script>
+  <script src="js/roomService.js"></script>
+  <script src="js/joinRoomModal.js"></script>
+  <script src="js/settingsModal.js"></script>
   <script src="js/menu.js"></script>
   <script src="js/play.js"></script>
   <script src="https://code.createjs.com/easeljs-0.8.2.min.js"></script>
