--- a/public/menu.html
+++ b/public/menu.html
@@ -47,14 +47,13 @@
                 <a class="navbar-brand" href="#page-top">Dotplay</a>
             </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="page-scroll">
-                        <a href="#portfolio">Setting could go here</a>
-                    </li>
-                </ul>
-            </div>
+
+
+
+
+
+
+
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container-fluid -->
@@ -68,8 +67,9 @@
                     <img class="img-responsive" src="src/menu/img/profile.png" alt="">
                     <div class="intro-text">
                         <span class="name">Dotplay</span>
-                        <button align="center" type="button" class="btn btn-primary" ng-click="startGame()">Start!</button>
-                        <button align="center" type="button" class="btn btn-primary" ng-click="test()">Test!</button>
+                        <button align="center" type="button" class="btn btn-primary" ng-click="createGame()">Create Game!</button>
+                        <button align="center" type="button" class="btn btn-primary" ng-click="joinGame()">Join Game!</button>
+                        <button align="center" type="button" class="btn btn-primary" ng-click="openSettings()"><i class="fa fa-cog"></i> Setting</button>
                         <hr class="star-light">
                         <span class="skills">A game either is a platformer or a puzzle</span>
                     </div>
