--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,9 @@
   <!-- EaselJS -->
   <script src="https://code.createjs.com/easeljs-0.8.2.min.js"></script>
 
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="css/style.css" media="screen" charset="utf-8">
+
   <!-- Controller -->
   <script src="js/app.js"></script>
   <script src="js/serverInterface.js"></script>
