praise and taunt

--- a/public/play.html
+++ b/public/play.html
@@ -34,5 +34,7 @@
 	<div ng-show="$root.isArtist" class="buttons">
 		<button type="button" class="btn btn-primary" ng-click="addPoint()">Add Point!</button>
 		<button type="button" class="btn btn-primary" ng-click="confirmMove()">Confirm Move!</button>
+		<button type="button" class="btn btn-success" ng-click="praise()">Praise!</button>
+		<button type="button" class="btn btn-danger" ng-click="taunt()">Taunt!</button>
 	</div>
 </html>
