--- a/public/menu.html
+++ b/public/menu.html
@@ -64,14 +64,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="src/menu/img/profile.png" alt="">
+                    <img class="img-responsive" src="src/menu/img/Puzzle-red.png" alt="">
                     <div class="intro-text">
                         <span class="name">Dotplay</span>
                         <button align="center" type="button" class="btn btn-primary" ng-click="createGame()">Create Game!</button>
                         <button align="center" type="button" class="btn btn-primary" ng-click="joinGame()">Join Game!</button>
                         <button align="center" type="button" class="btn btn-primary" ng-click="openSettings()"><i class="fa fa-cog"></i> Setting</button>
                         <hr class="star-light">
-                        <span class="skills">A game either is a platformer or a puzzle</span>
+                        <span class="skills">A simple PvP puzzle game</span>
                     </div>
                 </div>
             </div>
